Finalisation du nettoyage des données aq

--- a/savaryVosFinalProject.ipynb
+++ b/savaryVosFinalProject.ipynb
@@ -4,23 +4,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "tags": [
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend",
-     "outputPrepend"
-    ]
+    "tags": []
    },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Traitement des données de la ville de bj terminé ！\nTraitement des données de la ville de ld terminé ！\nLa taille des données météorologiques à enregistrer est　 (10806, 175)\nLa taille des données météorologiques à enregistrer est　 (10806, 120)\n"
+     "text": "Air quality data of bj completed ！\nAir quality data of ld completed ！\n"
     }
    ],
    "source": [
