--- a/savaryVosFinalProject.ipynb
+++ b/savaryVosFinalProject.ipynb
@@ -184,7 +184,7 @@
    "source": [
     "from prediction.compare_predictions import compare_predictions\n",
     "\n",
-    "methods = ['dummy', 'lstm']\n",
+    "methods = ['dummy', 'lstm','svr']\n",
     "for method in methods:\n",
     "    compare_predictions(method)\n"
    ]
