Auto stash before merge of "master" and "origin/master"

--- a/savaryVosFinalProject.ipynb
+++ b/savaryVosFinalProject.ipynb
@@ -10,10 +10,11 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Air quality data of bj prepared ！\nAir quality data of ld prepared ！\nMeteo data of bj prepared ！\nMeteo data of ld prepared ！\nData splitted into training and test sets !\nTemps pour la préparation des données : 511.9215531349182\n"
+     "text": "Air quality data of bj prepared ！\nAir quality data of ld prepared ！\nMeteo data of bj prepared ！\nMeteo data of ld prepared ！\nData splitted into training and test sets !\nTemps pour la préparation des données : 493.2467360496521\n"
     }
    ],
    "source": [
+    "\n",
     "from data.data_preparation import prepare_data\n",
     "import time\n",
     "\n",
@@ -170,6 +171,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from GBRT_model.GBRT_model_impl import predict_GBRT\n",
+    "import time\n",
+    "\n",
+    "start = time.time()\n",
+    "predict_GBRT()\n",
+    "end = time.time() - start\n",
+    "print('Temps pour la prédiction en utilisant SVR :', end)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "tags": []
@@ -188,7 +204,7 @@
     "start = time.time()\n",
     "predict_GBRT()\n",
     "end = time.time() - start\n",
-    "print('Temps pour la prédiction en utilisant SVR :', end)"
+    "print('Temps pour la prédiction en utilisant GBRT :', end)"
    ]
   },
   {
@@ -260,12 +276,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0-final"
+   "version": "3.7.4-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python37064bit105882ba71014e588d32000d0cc3f0b2",
-   "display_name": "Python 3.7.0 64-bit"
+   "name": "python37464bitbaseconda84c6186448384bfebf47badb6ac5770b",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)"
   }
  },
  "nbformat": 4,
